--- a/package.json
+++ b/package.json
@@ -5,32 +5,29 @@
   "repository": "git@github.com:Musical-Instrument-Learning-Community/milc-website.git",
   "author": "Haley-Zhu <Haley.ZhuY@gmail.com>",
   "license": "MIT",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "ie >= 9",
+    "not op_mini all"
+  ],
   "scripts": {
-    "dev": "webpack --config config/webpack.dev.conf.js",
-    "start": "webpack --config ./config/webpack.common.config.js",
-    "build": "webpack --config ./config/webpack.prod.config.js",
-    "pack": "babel src -d dist"
-  },
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.4.3"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./scripts/config/webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./scripts/config/webpack.prod.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-proposal-decorators": "^7.15.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
-    "@babel/register": "^7.15.3",
-    "babel-loader": "^8.2.2",
-    "html-webpack-plugin": "^5.3.2",
-    "webpack": "^5.54.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-merge": "^5.8.0"
+    "@types/webpack-env": "1.16.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "5.2.4",
+    "html-webpack-plugin": "5.3.1",
+    "mini-css-extract-plugin": "1.4.0",
+    "postcss-loader": "5.2.0",
+    "postcss-preset-env": "6.7.0",
+    "style-loader": "2.0.0",
+    "webpack": "5.28.0",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.2",
+    "webpack-merge": "5.7.3",
+    "webpackbar": "5.0.0-3"
   }
 }
