--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "css-loader": "5.2.4",
     "html-webpack-plugin": "5.3.1",
     "mini-css-extract-plugin": "1.4.0",
+    "node-sass": "5.0.0",
     "postcss-loader": "5.2.0",
     "postcss-preset-env": "6.7.0",
+    "sass-loader": "11.0.1",
     "style-loader": "2.0.0",
     "webpack": "5.28.0",
     "webpack-cli": "3.3.12",
