--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "build": "cross-env NODE_ENV=production webpack --config ./scripts/config/webpack.prod.js"
   },
   "devDependencies": {
+    "@babel/core": "7.13.16",
+    "@babel/plugin-transform-runtime": "7.13.15",
+    "@babel/preset-env": "7.13.15",
+    "@babel/runtime-corejs3": "7.13.17",
     "@types/webpack-env": "1.16.0",
+    "babel-loader": "8.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "5.2.4",
     "css-minimizer-webpack-plugin": "2.0.0",
