--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "7.13.16",
     "@babel/plugin-transform-runtime": "7.13.15",
     "@babel/preset-env": "7.13.15",
+    "@babel/preset-react": "7.13.13",
     "@babel/runtime-corejs3": "7.13.17",
     "@types/webpack-env": "1.16.0",
     "babel-loader": "8.2.2",
@@ -37,5 +38,11 @@
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "5.7.3",
     "webpackbar": "5.0.0-3"
+  },
+  "dependencies": {
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
