--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/plugin-transform-runtime": "7.13.15",
     "@babel/preset-env": "7.13.15",
     "@babel/preset-react": "7.13.13",
+    "@babel/preset-typescript": "7.13.0",
     "@babel/runtime-corejs3": "7.13.17",
     "@types/webpack-env": "1.16.0",
     "babel-loader": "8.2.2",
@@ -43,6 +44,7 @@
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "typescript": "4.2.4"
   }
 }
