--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "5.2.4",
     "css-minimizer-webpack-plugin": "2.0.0",
+    "fork-ts-checker-webpack-plugin": "6.2.5",
     "html-webpack-plugin": "5.3.1",
     "mini-css-extract-plugin": "1.4.0",
     "node-sass": "5.0.0",
