--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/runtime-corejs3": "7.13.17",
     "@types/webpack-env": "1.16.0",
     "babel-loader": "8.2.2",
+    "clean-webpack-plugin": "4.0.0-alpha.0",
     "copy-webpack-plugin": "8.1.1",
     "cross-env": "^7.0.3",
     "css-loader": "5.2.4",
