--- a/package.json
+++ b/package.json
@@ -1,53 +1,73 @@
 {
-  "name": "milc-website",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:Musical-Instrument-Learning-Community/milc-website.git",
-  "author": "Haley-Zhu <Haley.ZhuY@gmail.com>",
-  "license": "MIT",
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "ie >= 9",
-    "not op_mini all"
-  ],
-  "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./scripts/config/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./scripts/config/webpack.prod.js"
-  },
-  "devDependencies": {
-    "@babel/core": "7.13.16",
-    "@babel/plugin-transform-runtime": "7.13.15",
-    "@babel/preset-env": "7.13.15",
-    "@babel/preset-react": "7.13.13",
-    "@babel/preset-typescript": "7.13.0",
-    "@babel/runtime-corejs3": "7.13.17",
-    "@types/webpack-env": "1.16.0",
-    "babel-loader": "8.2.2",
-    "clean-webpack-plugin": "4.0.0-alpha.0",
-    "copy-webpack-plugin": "8.1.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "5.2.4",
-    "css-minimizer-webpack-plugin": "2.0.0",
-    "fork-ts-checker-webpack-plugin": "6.2.5",
-    "html-webpack-plugin": "5.3.1",
-    "mini-css-extract-plugin": "1.4.0",
-    "node-sass": "5.0.0",
-    "postcss-loader": "5.2.0",
-    "postcss-preset-env": "6.7.0",
-    "sass-loader": "11.0.1",
-    "style-loader": "2.0.0",
-    "webpack": "5.28.0",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.7.3",
-    "webpackbar": "5.0.0-3"
-  },
-  "dependencies": {
-    "@types/react": "17.0.3",
-    "@types/react-dom": "17.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "typescript": "4.2.4"
-  }
+	"name": "milc-website",
+	"version": "1.0.0",
+	"main": "index.js",
+	"repository": "git@github.com:Musical-Instrument-Learning-Community/milc-website.git",
+	"author": "Haley-Zhu <Haley.ZhuY@gmail.com>",
+	"license": "MIT",
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"ie >= 9",
+		"not op_mini all"
+	],
+	"scripts": {
+		"start": "cross-env NODE_ENV=development webpack-dev-server --config ./scripts/config/webpack.dev.js",
+		"build": "cross-env NODE_ENV=production webpack --config ./scripts/config/webpack.prod.js",
+		"format": "prettier --write src/**/*.{ts,tsx,scss,css,json}"
+	},
+	"devDependencies": {
+		"@babel/core": "7.13.16",
+		"@babel/plugin-transform-runtime": "7.13.15",
+		"@babel/preset-env": "7.13.15",
+		"@babel/preset-react": "7.13.13",
+		"@babel/preset-typescript": "7.13.0",
+		"@babel/runtime-corejs3": "7.13.17",
+		"@types/webpack-env": "1.16.0",
+		"babel-loader": "8.2.2",
+		"clean-webpack-plugin": "4.0.0-alpha.0",
+		"copy-webpack-plugin": "8.1.1",
+		"cross-env": "^7.0.3",
+		"css-loader": "5.2.4",
+		"css-minimizer-webpack-plugin": "2.0.0",
+		"fork-ts-checker-webpack-plugin": "6.2.5",
+		"html-webpack-plugin": "5.3.1",
+		"mini-css-extract-plugin": "1.4.0",
+		"node-sass": "5.0.0",
+		"postcss-loader": "5.2.0",
+		"postcss-preset-env": "6.7.0",
+		"sass-loader": "11.0.1",
+		"style-loader": "2.0.0",
+		"webpack": "5.28.0",
+		"webpack-cli": "3.3.12",
+		"webpack-dev-server": "3.11.2",
+		"webpack-merge": "5.7.3",
+		"webpackbar": "5.0.0-3",
+		"@typescript-eslint/eslint-plugin": "^4.31.2",
+		"@typescript-eslint/parser": "^4.31.2",
+		"babel-eslint": "^10.1.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-airbnb-typescript": "^14.0.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-config-react-app": "^6.0.0",
+		"eslint-import-resolver-typescript": "^2.5.0",
+		"eslint-plugin-flowtype": "^6.1.0",
+		"eslint-plugin-import": "^2.24.2",
+		"eslint-plugin-jest": "^24.4.2",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-react": "^7.26.0",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"eslint-webpack-plugin": "^3.0.1",
+		"prettier": "^2.4.1",
+		"prettier-eslint": "^13.0.0",
+		"prettier-eslint-cli": "^5.0.1"
+	},
+	"dependencies": {
+		"@types/react": "17.0.3",
+		"@types/react-dom": "17.0.3",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"typescript": "4.2.4"
+	}
 }
