--- a/package.json
+++ b/package.json
@@ -26,28 +26,15 @@
 		"@babel/preset-typescript": "7.13.0",
 		"@babel/runtime-corejs3": "7.13.17",
 		"@types/webpack-env": "1.16.0",
+		"@typescript-eslint/eslint-plugin": "^4.31.2",
+		"@typescript-eslint/parser": "^4.31.2",
+		"babel-eslint": "^10.1.0",
 		"babel-loader": "8.2.2",
 		"clean-webpack-plugin": "4.0.0-alpha.0",
 		"copy-webpack-plugin": "8.1.1",
 		"cross-env": "^7.0.3",
 		"css-loader": "5.2.4",
 		"css-minimizer-webpack-plugin": "2.0.0",
-		"fork-ts-checker-webpack-plugin": "6.2.5",
-		"html-webpack-plugin": "5.3.1",
-		"mini-css-extract-plugin": "1.4.0",
-		"node-sass": "5.0.0",
-		"postcss-loader": "5.2.0",
-		"postcss-preset-env": "6.7.0",
-		"sass-loader": "11.0.1",
-		"style-loader": "2.0.0",
-		"webpack": "5.28.0",
-		"webpack-cli": "3.3.12",
-		"webpack-dev-server": "3.11.2",
-		"webpack-merge": "5.7.3",
-		"webpackbar": "5.0.0-3",
-		"@typescript-eslint/eslint-plugin": "^4.31.2",
-		"@typescript-eslint/parser": "^4.31.2",
-		"babel-eslint": "^10.1.0",
 		"eslint-config-airbnb": "^18.2.1",
 		"eslint-config-airbnb-typescript": "^14.0.0",
 		"eslint-config-prettier": "^8.3.0",
@@ -61,13 +48,27 @@
 		"eslint-plugin-react": "^7.26.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-webpack-plugin": "^3.0.1",
+		"fork-ts-checker-webpack-plugin": "6.2.5",
+		"html-webpack-plugin": "5.3.1",
+		"mini-css-extract-plugin": "1.4.0",
+		"node-sass": "5.0.0",
+		"postcss-loader": "5.2.0",
+		"postcss-preset-env": "6.7.0",
 		"prettier": "^2.4.1",
 		"prettier-eslint": "^13.0.0",
-		"prettier-eslint-cli": "^5.0.1"
+		"prettier-eslint-cli": "^5.0.1",
+		"sass-loader": "11.0.1",
+		"style-loader": "2.0.0",
+		"webpack": "5.28.0",
+		"webpack-cli": "3.3.12",
+		"webpack-dev-server": "3.11.2",
+		"webpack-merge": "5.7.3",
+		"webpackbar": "5.0.0-3"
 	},
 	"dependencies": {
 		"@types/react": "17.0.3",
 		"@types/react-dom": "17.0.3",
+		"bootstrap": "^5.1.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"typescript": "4.2.4"
