--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,7 @@
 	"tabWidth": 2,
 	"singleQuote": true,
 	"jsxSingleQuote": true,
-	"printWidth": 100
+	"printWidth": 100,
+	"bracketSpacing": true,
+	"endOfLine": "lf"
 }
