--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"@babel/preset-typescript": "7.13.0",
 		"@babel/runtime-corejs3": "7.13.17",
 		"@types/webpack-env": "1.16.0",
+		"@typescript-eslint/eslint-plugin": "^4.32.0",
+		"@typescript-eslint/parser": "^4.32.0",
 		"babel-loader": "8.2.2",
 		"clean-webpack-plugin": "4.0.0-alpha.0",
 		"copy-webpack-plugin": "8.1.1",
@@ -33,8 +35,15 @@
 		"css-loader": "5.2.4",
 		"css-minimizer-webpack-plugin": "2.0.0",
 		"eslint": "^7.32.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-import-resolver-typescript": "^2.5.0",
+		"eslint-plugin-import": "^2.24.2",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^5.1.0",
 		"eslint-plugin-react": "^7.26.1",
+		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-plugin-unicorn": "^36.0.0",
 		"fork-ts-checker-webpack-plugin": "6.2.5",
 		"html-webpack-plugin": "5.3.1",
