--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"start": "cross-env NODE_ENV=development webpack-dev-server --config ./scripts/config/webpack.dev.js",
 		"build": "cross-env NODE_ENV=production webpack --config ./scripts/config/webpack.prod.js",
 		"format": "prettier --write src/**/*.{ts,tsx,scss,css,json}",
-		"lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
+		"lint": "yarn lint-eslint && yarn lint-stylelint",
+		"lint-eslint": "eslint -c .eslintrc.js --ext .js,.jsx,.ts,.tsx src --color",
+		"lint-stylelint": "stylelint --config .stylelintrc.js src/**/*.{css,scss}",
 		"prod": "yarn format && yarn lint && yarn build"
 	},
 	"devDependencies": {
@@ -54,6 +56,13 @@
 		"prettier": "^2.4.1",
 		"sass-loader": "11.0.1",
 		"style-loader": "2.0.0",
+		"stylelint": "^13.13.1",
+		"stylelint-config-prettier": "^8.0.2",
+		"stylelint-config-rational-order": "^0.1.2",
+		"stylelint-config-standard": "^22.0.0",
+		"stylelint-declaration-block-no-ignored-properties": "^2.4.0",
+		"stylelint-order": "^4.1.0",
+		"stylelint-scss": "^3.21.0",
 		"webpack": "5.28.0",
 		"webpack-cli": "3.3.12",
 		"webpack-dev-server": "3.11.2",
