--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
 		"html-webpack-plugin": "5.3.1",
 		"mini-css-extract-plugin": "1.4.0",
 		"node-sass": "5.0.0",
+		"postcss": "^8.3.8",
+		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-loader": "5.2.0",
 		"postcss-preset-env": "6.7.0",
 		"prettier": "^2.4.1",
@@ -63,7 +65,9 @@
 		"stylelint-declaration-block-no-ignored-properties": "^2.4.0",
 		"stylelint-order": "^4.1.0",
 		"stylelint-scss": "^3.21.0",
+		"terser-webpack-plugin": "^5.2.4",
 		"webpack": "5.28.0",
+		"webpack-bundle-analyzer": "^4.4.2",
 		"webpack-cli": "3.3.12",
 		"webpack-dev-server": "3.11.2",
 		"webpack-merge": "5.7.3",
@@ -72,6 +76,7 @@
 	"dependencies": {
 		"@types/react": "17.0.3",
 		"@types/react-dom": "17.0.3",
+		"axios": "^0.22.0",
 		"bootstrap": "^5.1.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
