--- a/package.json
+++ b/package.json
@@ -77,9 +77,9 @@
 		"@types/react": "17.0.3",
 		"@types/react-dom": "17.0.3",
 		"@types/react-redux": "^7.1.18",
+		"@types/react-router-dom": "^5.3.0",
 		"axios": "^0.22.0",
 		"bootstrap": "^5.1.1",
-		"notistack": "^2.0.2",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-redux": "^7.2.5",
