--- a/package.json
+++ b/package.json
@@ -74,13 +74,18 @@
 		"webpackbar": "5.0.0-3"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.36",
+		"@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"@fortawesome/react-fontawesome": "^0.1.16",
+		"@material-ui/core": "^4.12.3",
 		"@types/react": "17.0.3",
 		"@types/react-dom": "17.0.3",
 		"@types/react-redux": "^7.1.18",
 		"@types/react-router-dom": "^5.3.0",
 		"axios": "^0.22.0",
-		"bootstrap": "^5.1.1",
+		"bootstrap": "5.1.1",
 		"react": "17.0.2",
+		"react-bootstrap": "^2.0.0-rc.0",
 		"react-dom": "17.0.2",
 		"react-redux": "^7.2.5",
 		"react-router-dom": "^5.3.0",
