--- a/package.json
+++ b/package.json
@@ -74,6 +74,10 @@
 		"webpackbar": "5.0.0-3"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.15.4",
+		"@fortawesome/fontawesome-svg-core": "^1.2.36",
+		"@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"@fortawesome/react-fontawesome": "^0.1.16",
 		"@types/react": "17.0.3",
 		"@types/react-dom": "17.0.3",
 		"@types/react-redux": "^7.1.18",
@@ -87,6 +91,7 @@
 		"redux": "^4.1.1",
 		"redux-persist": "^6.0.0",
 		"redux-saga": "^1.1.3",
+		"swiper": "6.8.4",
 		"typescript": "4.2.4"
 	}
 }
