--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.16",
+		"@mui/styles": "^5.0.2",
 		"@types/react": "17.0.3",
 		"@types/react-dom": "17.0.3",
 		"@types/react-redux": "^7.1.18",
