--- a/package.json
+++ b/package.json
@@ -74,6 +74,12 @@
 		"webpackbar": "5.0.0-3"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.15.4",
+		"@fortawesome/fontawesome-svg-core": "^1.2.36",
+		"@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"@fortawesome/react-fontawesome": "^0.1.16",
+		"@material-ui/core": "^4.12.3",
+		"@mui/styles": "^5.0.2",
 		"@types/react": "17.0.3",
 		"@types/react-dom": "17.0.3",
 		"@types/react-redux": "^7.1.18",
@@ -88,13 +94,8 @@
 		"redux": "^4.1.1",
 		"redux-persist": "^6.0.0",
 		"redux-saga": "^1.1.3",
+		"styled-components": "^5.3.3",
 		"swiper": "6.8.4",
-		"typescript": "4.2.4",
-		"@fortawesome/fontawesome-free": "^5.15.4",
-		"@fortawesome/fontawesome-svg-core": "^1.2.36",
-		"@fortawesome/free-solid-svg-icons": "^5.15.4",
-		"@fortawesome/react-fontawesome": "^0.1.16",
-		"@mui/styles": "^5.0.2",
-		"@material-ui/core": "^4.12.3"
+		"typescript": "4.2.4"
 	}
 }
