--- a/package.json
+++ b/package.json
@@ -1,101 +1,59 @@
 {
-	"name": "milc-website",
-	"version": "1.0.0",
-	"main": "index.js",
-	"repository": "git@github.com:Musical-Instrument-Learning-Community/milc-website.git",
-	"author": "Haley-Zhu <Haley.ZhuY@gmail.com>",
-	"license": "MIT",
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"ie >= 9",
-		"not op_mini all"
-	],
-	"scripts": {
-		"start": "cross-env NODE_ENV=development webpack-dev-server --config ./scripts/config/webpack.dev.js",
-		"build": "cross-env NODE_ENV=production webpack --config ./scripts/config/webpack.prod.js",
-		"format": "prettier --write src/**/*.{ts,tsx,scss,css,json}",
-		"lint": "yarn lint-eslint && yarn lint-stylelint",
-		"lint-eslint": "eslint -c .eslintrc.js --ext .js,.jsx,.ts,.tsx src --color",
-		"lint-stylelint": "stylelint --config .stylelintrc.js src/**/*.{css,scss}",
-		"prod": "yarn format && yarn lint && yarn build"
-	},
-	"devDependencies": {
-		"@babel/core": "7.13.16",
-		"@babel/plugin-transform-runtime": "7.13.15",
-		"@babel/preset-env": "7.13.15",
-		"@babel/preset-react": "7.13.13",
-		"@babel/preset-typescript": "7.13.0",
-		"@babel/runtime-corejs3": "7.13.17",
-		"@types/webpack-env": "1.16.0",
-		"@typescript-eslint/eslint-plugin": "^4.32.0",
-		"@typescript-eslint/parser": "^4.32.0",
-		"babel-loader": "8.2.2",
-		"clean-webpack-plugin": "4.0.0-alpha.0",
-		"copy-webpack-plugin": "8.1.1",
-		"cross-env": "^7.0.3",
-		"css-loader": "5.2.4",
-		"css-minimizer-webpack-plugin": "2.0.0",
-		"eslint": "^7.32.0",
-		"eslint-config-airbnb": "^18.2.1",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-import-resolver-typescript": "^2.5.0",
-		"eslint-plugin-import": "^2.24.2",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-promise": "^5.1.0",
-		"eslint-plugin-react": "^7.26.1",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"eslint-plugin-unicorn": "^36.0.0",
-		"fork-ts-checker-webpack-plugin": "6.2.5",
-		"html-webpack-plugin": "5.3.1",
-		"mini-css-extract-plugin": "1.4.0",
-		"node-sass": "5.0.0",
-		"postcss": "^8.3.8",
-		"postcss-flexbugs-fixes": "^5.0.2",
-		"postcss-loader": "5.2.0",
-		"postcss-preset-env": "6.7.0",
-		"prettier": "^2.4.1",
-		"sass-loader": "11.0.1",
-		"style-loader": "2.0.0",
-		"stylelint": "^13.13.1",
-		"stylelint-config-prettier": "^8.0.2",
-		"stylelint-config-rational-order": "^0.1.2",
-		"stylelint-config-standard": "^22.0.0",
-		"stylelint-declaration-block-no-ignored-properties": "^2.4.0",
-		"stylelint-order": "^4.1.0",
-		"stylelint-scss": "^3.21.0",
-		"terser-webpack-plugin": "^5.2.4",
-		"webpack": "5.28.0",
-		"webpack-bundle-analyzer": "^4.4.2",
-		"webpack-cli": "3.3.12",
-		"webpack-dev-server": "3.11.2",
-		"webpack-merge": "5.7.3",
-		"webpackbar": "5.0.0-3"
-	},
-	"dependencies": {
-		"@fortawesome/fontawesome-free": "^5.15.4",
+  "name": "milc-website",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.16",
 		"@material-ui/core": "^4.12.3",
-		"@mui/styles": "^5.0.2",
-		"@types/react": "17.0.3",
-		"@types/react-dom": "17.0.3",
-		"@types/react-redux": "^7.1.18",
-		"@types/react-router-dom": "^5.3.0",
-		"axios": "^0.22.0",
-		"bootstrap": "5.1.1",
-		"react": "17.0.2",
-		"react-bootstrap": "^2.0.0-rc.0",
-		"react-dom": "17.0.2",
-		"react-redux": "^7.2.5",
-		"react-router-dom": "^5.3.0",
-		"redux": "^4.1.1",
-		"redux-persist": "^6.0.0",
-		"redux-saga": "^1.1.3",
-		"styled-components": "^5.3.3",
-		"swiper": "6.8.4",
-		"typescript": "4.2.4"
-	}
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.20",
+    "@types/react-router-dom": "^5.3.0",
+    "axios": "^0.24.0",
+    "node-sass": "5.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.3",
+    "swiper": "^7.2.0",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
