--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.3",
-    "swiper": "^7.2.0",
+    "swiper": "6.8.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
