--- a/.github/workflow/CICD.yml
+++ b/.github/workflow/CICD.yml
@@ -2,7 +2,7 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master, devops/threemay ]
+    branches: [ master, devops]
   pull_request:
     branches: [ master ]
 
