--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -26,8 +26,11 @@ jobs:
         run: |
           npm install -g yarn 
           yarn install
+          ls
       - name: build
-        run: yarn run build
+        run: |
+          yarn run build || ture
+          ls
       - name: test
         # run: npm test
         run: echo "fake test"
