--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -29,7 +29,7 @@ jobs:
           ls
       - name: build
         run: |
-          yarn run build || ture
+          yarn run build || true
           ls
       - name: test
         # run: npm test
