--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -6,8 +6,11 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  s3BucketName: test
+
 jobs:
-  build:
+  build-deploy:
 
     runs-on: ubuntu-latest
 
@@ -36,6 +39,16 @@ jobs:
       # - name: create infrastructure
       #   # run: npm test
       #   run: echo "fake test"
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
       - name: upload to s3
+        uses: actions/aws@v2.0.1
         # run: npm test
-        run: echo "fake test"
+        run: |
+          aws s3 cp ../build/ s3://$s3BucketName --recursive
+          
