--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -50,5 +50,5 @@ jobs:
         # uses: actions/aws@v2.0.1
         run: |
           aws -cli --version
-          aws s3 cp ../build/ s3://${{ secrets.S3BUCKETNAME }} --recursive
+          aws s3 cp ./build/ s3://${{ secrets.S3BUCKETNAME }} --recursive
           
