--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -52,4 +52,4 @@ jobs:
           aws -cli --version
           ls
           aws s3 cp ./build/ s3://${{ secrets.S3BUCKETNAME }} --recursive
-          aws s3api get-bucket-website --bucket {{ secrets.S3BUCKETNAME }}
+        # aws s3api get-bucket-website --bucket {{ secrets.S3BUCKETNAME }}
