--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -53,3 +53,6 @@ jobs:
           ls
           aws s3 cp ./build/ s3://${{ secrets.S3BUCKETNAME }} --recursive
         # aws s3api get-bucket-website --bucket {{ secrets.S3BUCKETNAME }}
+      
+      - name: output aws s3 endpoint
+        run: echo "http://{{ secrets.S3BUCKETNAME }}.s3-website-${{ env.AWS_REGION }}amazonaws.com/
